// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRouterLink should render correctly with a "className" attribute 1`] = `
<div>
  <a
    activeClassName="bpk-router-link--active"
    className="bpk-router-link my-custom-class-1 my-custom-class-2"
    href="blank"
    onClick={[Function]}
  >
    Link
  </a>
  ,
</div>
`;

exports[`BpkRouterLink should render correctly with a "to" attribute 1`] = `
<div>
  <a
    activeClassName="bpk-router-link--active"
    className="bpk-router-link"
    href="blank"
    onClick={[Function]}
  >
    Link
  </a>
</div>
`;

exports[`BpkRouterLink should render correctly with arbitrary attributes 1`] = `
<div>
  <a
    activeClassName="bpk-router-link--active"
    className="bpk-router-link"
    href="blank"
    onClick={[Function]}
    target="_blank"
  >
    Link
  </a>
  ,
</div>
`;
